--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -3,7 +3,7 @@
     <button mat-raised-button (click)="addUpgrade(skilltree)">Add Upgrade</button>
   </mat-toolbar>
 
-  <sat-popover #rowsPopover horizontalAlign="after" verticalAlign="below">
+  <sat-popover #rowsPopover xAlign="after" yAlign="center" hasBackdrop>
     <mat-card>
       <mat-card-content>
         <p>The number of rows the inventory will have.<br>
@@ -17,33 +17,32 @@
     </mat-card>
   </sat-popover>
 
-  <!--
-  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Backpack?.upgrades">
+  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Backpack; trackBy: id">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
     <div>
       <mat-input-container>
         <input matInput placeholder="Rows" [value]="upgrade.rows ? upgrade.rows : 0" type="text" pattern="[+-=][0-9]+"
-               (blur)="update(skilltree, upgrade, 'rows',$event)">
+               (blur)="update(skilltree, upgrade, 'rows', $event.srcElement.value)">
         <span matSuffix>rows</span>
       </mat-input-container>
-      <button mat-icon-button [satPopoverAnchorFor]="rowsPopover">
+      <button mat-icon-button [satPopoverAnchorFor]="rowsPopover" (click)="rowsPopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
-      <mat-button-toggle-group [value]="upgrade.drop ? upgrade.drop : null">
-        <mat-button-toggle [value]="true" matTooltip="Activate">
+      <mat-button-toggle-group [value]="null || upgrade.drop"
+                               (change)="update(skilltree, upgrade, 'drop', $event.value)">
+        <mat-button-toggle [value]="true" matTooltip="Yes">
           <mat-icon svgIcon="check_box">check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="null" matTooltip="Don't change">
           <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
         </mat-button-toggle>
-        <mat-button-toggle [value]="false" matTooltip="Deactivate">
+        <mat-button-toggle [value]="false" matTooltip="No">
           <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
         </mat-button-toggle>
       </mat-button-toggle-group>
       <span>Drop content on death?</span>
     </div>
   </mat-expansion-panel>
-  -->
 </div>
