--- a/src/app/components/skills/damage-skill/damage-skill.component.html
+++ b/src/app/components/skills/damage-skill/damage-skill.component.html
@@ -1,30 +1,30 @@
-<mat-toolbar class="spacer-t-1em spacer-b-1em">
-  <button mat-raised-button (click)="addUpgrade()">Add Upgrade</button>
-</mat-toolbar>
+<div *ngIf="selectedSkilltree$ | async as skilltree">
+  <mat-toolbar class="spacer-t-1em spacer-b-1em">
+    <button mat-raised-button (click)="addUpgrade(skilltree)">Add Upgrade</button>
+  </mat-toolbar>
 
-<sat-popover #damagePopover horizontalAlign="after" verticalAlign="below"
->
-  <mat-card>
-    <mat-card-content>
-      <p>The amount of damage the pet will cause with melee attacks.<br>
-        Format: [+-=][number]<br>
-        Examples:<br>
-        +2.5<br>
-        -3<br>
-        =6.0
-      </p>
-    </mat-card-content>
-  </mat-card>
-</sat-popover>
+  <sat-popover #damagePopover xAlign="after" yAlign="center">
+    <mat-card>
+      <mat-card-content>
+        <p>The amount of damage the pet will cause with melee attacks.<br>
+          Format: [+-=][number]<br>
+          Examples:<br>
+          +2.5<br>
+          -3<br>
+          =6.0
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </sat-popover>
 
-<div *ngIf="skill">
-  <mat-expansion-panel *ngFor="let upgrade of skill.upgrades">
+  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Damage; trackBy: id">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
     <mat-input-container>
-      <input matInput placeholder="Damage" [(ngModel)]="upgrade.damage" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
+      <input matInput placeholder="Damage" [value]="upgrade.damage" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?"
+             (blur)="update(skilltree, upgrade, 'damage', $event.srcElement.value)">
       <span matSuffix>damage</span>
     </mat-input-container>
-    <button mat-icon-button [satPopoverAnchorFor]="damagePopover">
+    <button mat-icon-button [satPopoverAnchorFor]="damagePopover" (click)="damagePopover.toggle()">
       <mat-icon svgIcon="info_outline">info_outline</mat-icon>
     </button>
   </mat-expansion-panel>
