--- a/src/app/components/skills/knockback-skill/knockback-skill.component.html
+++ b/src/app/components/skills/knockback-skill/knockback-skill.component.html
@@ -1,30 +1,32 @@
-<mat-toolbar class="spacer-t-1em spacer-b-1em">
-  <button mat-raised-button (click)="addUpgrade()">Add Upgrade</button>
-</mat-toolbar>
+<div *ngIf="selectedSkilltree$ | async as skilltree">
+  <mat-toolbar class="spacer-t-1em spacer-b-1em">
+    <button mat-raised-button (click)="addUpgrade(skilltree)">Add Upgrade</button>
+  </mat-toolbar>
 
-<sat-popover #chancePopover horizontalAlign="after" verticalAlign="below">
-  <mat-card>
-    <mat-card-content>
-      <p>The chance the pet will knock back his target on hit.<br>
-        Format: [+-=][number]<br>
-        Examples:<br>
-        +2<br>
-        -3<br>
-        =6
-      </p>
-    </mat-card-content>
-  </mat-card>
-</sat-popover>
+  <sat-popover #chancePopover xAlign="after" yAlign="center" hasBackdrop>
+    <mat-card>
+      <mat-card-content>
+        <p>The chance the pet will knock back his target on hit.<br>
+          Format: [+-=][number]<br>
+          Examples:<br>
+          +2<br>
+          -3<br>
+          =6
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </sat-popover>
 
-<div *ngIf="skill">
-  <mat-expansion-panel *ngFor="let upgrade of skill.upgrades">
+  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Knockback; trackBy: id">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
     <div>
       <mat-input-container>
-        <input matInput placeholder="Chance" [(ngModel)]="upgrade.chance" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <input matInput placeholder="Chance" [value]="upgrade.chance ? upgrade.chance : 0" type="text"
+               pattern="[+-=](?:[0-9]|[1-9][0-9]|100)"
+               (blur)="update(skilltree, upgrade, 'chance', $event.srcElement.value)">
         <span matSuffix>%</span>
       </mat-input-container>
-      <button mat-icon-button [satPopoverAnchorFor]="chancePopover">
+      <button mat-icon-button [satPopoverAnchorFor]="chancePopover" (click)="chancePopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
