--- a/src/app/components/skills/ranged-skill/ranged-skill.component.html
+++ b/src/app/components/skills/ranged-skill/ranged-skill.component.html
@@ -1,58 +1,62 @@
-<mat-toolbar class="spacer-t-1em spacer-b-1em">
-  <button mat-raised-button (click)="addUpgrade()">Add Upgrade</button>
-</mat-toolbar>
+<div *ngIf="selectedSkilltree$ | async as skilltree">
+  <mat-toolbar class="spacer-t-1em spacer-b-1em">
+    <button mat-raised-button (click)="addUpgrade(skilltree)">Add Upgrade</button>
+  </mat-toolbar>
 
-<sat-popover #rangePopover horizontalAlign="after" verticalAlign="below">
-  <mat-card>
-    <mat-card-content>
-      <p>The range the pet will start shooting.<br>
-        Format: [+-=][number]<br>
-        Examples:<br>
-        +2<br>
-        -3<br>
-        =6
-      </p>
-    </mat-card-content>
-  </mat-card>
-</sat-popover>
-<sat-popover #ratePopover horizontalAlign="after" verticalAlign="below">
-  <mat-card>
-    <mat-card-content>
-      <p>The rate at which the pet will shot.<br>
-        Format: [+-=][number]<br>
-        Examples:<br>
-        +2<br>
-        -3<br>
-        =6
-      </p>
-    </mat-card-content>
-  </mat-card>
-</sat-popover>
+  <sat-popover #rangePopover xAlign="after" yAlign="center" hasBackdrop>
+    <mat-card>
+      <mat-card-content>
+        <p>The range the pet will start shooting.<br>
+          Format: [+-=][number]<br>
+          Examples:<br>
+          +2<br>
+          -3<br>
+          =6
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </sat-popover>
+  <sat-popover #ratePopover xAlign="after" yAlign="center" hasBackdrop>
+    <mat-card>
+      <mat-card-content>
+        <p>The rate at which the pet will shot.<br>
+          Format: [+-=][number]<br>
+          Examples:<br>
+          +2<br>
+          -3<br>
+          =6
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </sat-popover>
 
-<div *ngIf="skill">
-  <mat-expansion-panel *ngFor="let upgrade of skill.upgrades">
+  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Ranged; trackBy: id">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
     <div>
       <mat-input-container>
-        <input matInput placeholder="Range" [(ngModel)]="upgrade.range" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <input matInput placeholder="Range" [value]="upgrade.range ? upgrade.range : 0" type="text"
+               pattern="[+-=][0-9]+(\.[0-9]+)?"
+               (blur)="update(skilltree, upgrade, 'range', $event.srcElement.value)">
         <span matSuffix>meters</span>
       </mat-input-container>
-      <button mat-icon-button [satPopoverAnchorFor]="rangePopover">
+      <button mat-icon-button [satPopoverAnchorFor]="rangePopover" (click)="rangePopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
       <mat-input-container>
-        <input matInput placeholder="Rate of fire" [(ngModel)]="upgrade.rate" type="text"
-               pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <input matInput placeholder="Rate of fire" [value]="upgrade.rate ? upgrade.rate : 0" type="text"
+               pattern="[+-=][0-9]+(\.[0-9]+)?"
+               (blur)="update(skilltree, upgrade, 'rate', $event.srcElement.value)">
         <span matSuffix> x 50ms delay = shots/second</span>
       </mat-input-container>
-      <button mat-icon-button [satPopoverAnchorFor]="ratePopover">
+      <button mat-icon-button [satPopoverAnchorFor]="ratePopover" (click)="ratePopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
-      <mat-select placeholder="Projectile" [(ngModel)]="upgrade.projectile">
+      <mat-select placeholder="Projectile" [value]="upgrade.projectile|| 'Arrow'"
+                  (change)="update(skilltree, upgrade, 'projectile', $event.value)">
         <mat-option value="Arrow">Arrow</mat-option>
         <mat-option value="Snowball">Snowball</mat-option>
         <mat-option value="Fireball">Fireball</mat-option>
