--- a/src/ressources/styles/components/app.scss
+++ b/src/ressources/styles/components/app.scss
@@ -11,3 +11,7 @@ html, body, main, app-skilltree, mat-sidenav-container {
 .spacer-t-1em {
   margin-top: 1em !important;;
 }
+
+.bold {
+  font-weight: bold !important;
+}
